--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -24,6 +25,7 @@
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.11",
     "jest": "^26.6.3",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
